deploy/aks/k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: customer-insights
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
